--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/main.js",
   "scripts": {
     "start": "tsc && node dist/main.js",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "lint": "prettier --config .prettierrc --write \"**/*.{js,jsx,ts,tsx}\"",
+    "lint:check": "prettier --list-different \"**/*.{js,jsx,ts,tsx}\" || (echo 'There are files that need formatting.' && exit 1)"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.0",
     "jest": "^29.7.0",
+    "prettier": "^3.2.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
