--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "scripts": {
         "start": "tsc && node dist/main.js",
         "test": "jest --coverage",
-        "prettier": "prettier --config .prettierrc --write \"**/*.{js,jsx,ts,tsx}\"",
-        "prettier:check": "prettier --list-different \"**/*.{js,jsx,ts,tsx}\" || (echo 'There are files that need formatting.' && exit 1)"
+        "format": "prettier --config .prettierrc --write \"**/*.{js,jsx,ts,tsx}\"",
+        "format:check": "prettier --list-different \"**/*.{js,jsx,ts,tsx}\" || (echo 'There are files that need formatting.' && exit 1)",
+        "lint": "eslint ."
     },
     "keywords": [],
     "author": "",
@@ -15,6 +16,11 @@
     "devDependencies": {
         "@types/jest": "^29.5.11",
         "@types/node": "^20.11.0",
+        "@typescript-eslint/eslint-plugin": "^6.18.1",
+        "@typescript-eslint/parser": "^6.18.1",
+        "eslint": "^8.56.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.1.3",
         "jest": "^29.7.0",
         "prettier": "^3.2.2",
         "ts-jest": "^29.1.1",
