--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "dist/main.js",
     "scripts": {
         "start": "tsc && node dist/main.js",
-        "test": "jest --coverage",
+        "test": "vitest --coverage",
         "format": "prettier --config .prettierrc --write \"**/*.{js,jsx,ts,tsx}\"",
         "format:check": "prettier --list-different \"**/*.{js,jsx,ts,tsx}\" || (echo 'There are files that need formatting.' && exit 1)",
         "lint": "eslint ."
@@ -14,17 +14,19 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@types/jest": "^29.5.11",
         "@types/node": "^20.11.0",
         "@typescript-eslint/eslint-plugin": "^6.18.1",
         "@typescript-eslint/parser": "^6.18.1",
+        "@vitest/coverage-v8": "^1.2.0",
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
-        "jest": "^29.7.0",
         "prettier": "^3.2.2",
-        "ts-jest": "^29.1.1",
         "ts-node": "^10.9.2",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "vitest": "^1.2.0"
+    },
+    "dependencies": {
+        "ioredis": "^5.3.2"
     }
 }
