--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "dist/main.js",
     "scripts": {
         "start": "tsc && node dist/main.js",
-        "test": "vitest --coverage",
+        "test": "vitest run --coverage",
         "format": "prettier --config .prettierrc --write \"**/*.{js,jsx,ts,tsx}\"",
         "format:check": "prettier --list-different \"**/*.{js,jsx,ts,tsx}\" || (echo 'There are files that need formatting.' && exit 1)",
         "lint": "eslint ."
@@ -13,6 +13,7 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
+    "type": "module",
     "devDependencies": {
         "@types/node": "^20.11.0",
         "@typescript-eslint/eslint-plugin": "^6.18.1",
@@ -27,6 +28,7 @@
         "vitest": "^1.2.0"
     },
     "dependencies": {
-        "ioredis": "^5.3.2"
+        "ioredis": "^5.3.2",
+        "simple-git": "^3.22.0"
     }
 }
