--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "vitest": "^1.2.0"
     },
     "dependencies": {
+        "@tensorflow/tfjs": "^4.17.0",
         "ioredis": "^5.3.2",
         "simple-git": "^3.22.0",
         "ts-morph": "^21.0.1"
