--- a/tsconfig.json
+++ b/tsconfig.json
@@ -106,6 +106,6 @@
         // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
         "skipLibCheck": true /* Skip type checking all .d.ts files. */
     },
-    "include": ["src/**/*.ts", "vitest.config.ts"],
-    "exclude": ["node_modules"]
+    "include": ["src/**/*.ts"],
+    "exclude": ["node_modules", "**/*.test.ts", "**/__tests__", "vitest.config.ts"]
 }
